--- a/example-project/style.css
+++ b/example-project/style.css
@@ -22,7 +22,7 @@ section {
 }
 
 h1, h2, h3 {
-    color: #4682B4;
+    color: silver;
     text-transform: uppercase;
     letter-spacing: 2px;
     position: relative;
@@ -37,7 +37,7 @@ li {
     margin-bottom: 10px;
     padding: 10px;
     border: 2px solid #B0C4DE;
-    background-color: rgba(176, 196, 222, 0.1);
+    background-color:rgb(5, 12, 20);
 }
 
 form {
