--- a/example-project/style.css
+++ b/example-project/style.css
@@ -6,7 +6,7 @@ body {
     line-height: 1.6;
     margin: 0;
     padding: 0;
-    color: #2E8B57;
+    color: silver;
     background-color: rgb(6, 6, 32);
 }
 
